--- a/casino/favorite.html
+++ b/casino/favorite.html
@@ -53,7 +53,8 @@
             <div class="container_wrap">
 
                 <div class="container py-8">
-                    <div class="inline-flex items-center gap-2 p-2 px-4 bg-backlight rounded">
+                    <h3 class="flex sm:hidden items-center text-2xl text-tit font-extrabold"><a class="p-2" href="/bcGame/casino/index.html"><svg class="w-4 h-4 fill-basic rotate-180"><use xlink:href="/bcGame/dist/custom_img/symbol-defs.svg#icon_Arrow"></use></svg></a>가장 좋아하는</h3>
+                    <div class="hidden sm:inline-flex items-center gap-2 p-2 px-4 bg-backlight rounded">
                         <b class="font-bold text-tit">가장 좋아하는</b>
                     </div>
                    <div class="py-40">
@@ -75,7 +76,7 @@
                             <li class="swiper-slide cursor-pointer bg-list rounded">
                                 <a href="javascript:;"><img src="/bcGame/dist/custom_img/casino/casino_1.png" alt=""></a>
                                 <div class="flex items-center justify-between px-2 py-3">
-                                    <p class="font-medium truncate"><a href="javascript:;">BC Originals</a></p>
+                                    <p class="font-medium truncate game_tit"><a href="javascript:;">BC Originals</a></p>
                                     <div class="casino_gameinfo ">
                                         <svg class="w-5 h-5 fill-basic cursor-pointer"><use xlink:href="/bcGame/dist/custom_img/symbol-defs.svg#icon_Inform"></use></svg>
                                         <div class="hover_box p-4 bg-back2">
@@ -99,7 +100,7 @@
                             <li class="swiper-slide cursor-pointer bg-list rounded">
                                 <a href="javascript:;"><img src="/bcGame/dist/custom_img/casino/casino_2.png" alt=""></a>
                                 <div class="flex items-center justify-between px-2 py-3">
-                                    <p class="font-medium truncate"><a href="javascript:;">BC Originals</a></p>
+                                    <p class="font-medium truncate game_tit"><a href="javascript:;">BC Originals</a></p>
                                     <div class="casino_gameinfo ">
                                         <svg class="w-5 h-5 fill-basic cursor-pointer"><use xlink:href="/bcGame/dist/custom_img/symbol-defs.svg#icon_Inform"></use></svg>
                                         <div class="hover_box p-4 bg-back2">
@@ -123,7 +124,7 @@
                             <li class="swiper-slide cursor-pointer bg-list rounded">
                                 <a href="javascript:;"><img src="/bcGame/dist/custom_img/casino/casino_3.png" alt=""></a>
                                 <div class="flex items-center justify-between px-2 py-3">
-                                    <p class="font-medium truncate"><a href="javascript:;">BC Originals</a></p>
+                                    <p class="font-medium truncate game_tit"><a href="javascript:;">BC Originals</a></p>
                                     <div class="casino_gameinfo ">
                                         <svg class="w-5 h-5 fill-basic cursor-pointer"><use xlink:href="/bcGame/dist/custom_img/symbol-defs.svg#icon_Inform"></use></svg>
                                         <div class="hover_box p-4 bg-back2">
@@ -147,7 +148,7 @@
                             <li class="swiper-slide cursor-pointer bg-list rounded">
                                 <a href="javascript:;"><img src="/bcGame/dist/custom_img/casino/casino_4.avif" alt=""></a>
                                 <div class="flex items-center justify-between px-2 py-3">
-                                    <p class="font-medium truncate"><a href="javascript:;">BC Originals</a></p>
+                                    <p class="font-medium truncate game_tit"><a href="javascript:;">BC Originals</a></p>
                                     <div class="casino_gameinfo ">
                                         <svg class="w-5 h-5 fill-basic cursor-pointer"><use xlink:href="/bcGame/dist/custom_img/symbol-defs.svg#icon_Inform"></use></svg>
                                         <div class="hover_box p-4 bg-back2">
@@ -171,7 +172,7 @@
                             <li class="swiper-slide cursor-pointer bg-list rounded">
                                 <a href="javascript:;"><img src="/bcGame/dist/custom_img/casino/casino_5.avif" alt=""></a>
                                 <div class="flex items-center justify-between px-2 py-3">
-                                    <p class="font-medium truncate"><a href="javascript:;">BC Originals</a></p>
+                                    <p class="font-medium truncate game_tit"><a href="javascript:;">BC Originals</a></p>
                                     <div class="casino_gameinfo ">
                                         <svg class="w-5 h-5 fill-basic cursor-pointer"><use xlink:href="/bcGame/dist/custom_img/symbol-defs.svg#icon_Inform"></use></svg>
                                         <div class="hover_box p-4 bg-back2">
@@ -195,7 +196,7 @@
                             <li class="swiper-slide cursor-pointer bg-list rounded">
                                 <a href="javascript:;"><img src="/bcGame/dist/custom_img/casino/casino_6.avif" alt=""></a>
                                 <div class="flex items-center justify-between px-2 py-3">
-                                    <p class="font-medium truncate"><a href="javascript:;">BC Originals</a></p>
+                                    <p class="font-medium truncate game_tit"><a href="javascript:;">BC Originals</a></p>
                                     <div class="casino_gameinfo ">
                                         <svg class="w-5 h-5 fill-basic cursor-pointer"><use xlink:href="/bcGame/dist/custom_img/symbol-defs.svg#icon_Inform"></use></svg>
                                         <div class="hover_box p-4 bg-back2">
@@ -219,7 +220,7 @@
                             <li class="swiper-slide cursor-pointer bg-list rounded">
                                 <a href="javascript:;"><img src="/bcGame/dist/custom_img/casino/casino_7.avif" alt=""></a>
                                 <div class="flex items-center justify-between px-2 py-3">
-                                    <p class="font-medium truncate"><a href="javascript:;">BC Originals</a></p>
+                                    <p class="font-medium truncate game_tit"><a href="javascript:;">BC Originals</a></p>
                                     <div class="casino_gameinfo ">
                                         <svg class="w-5 h-5 fill-basic cursor-pointer"><use xlink:href="/bcGame/dist/custom_img/symbol-defs.svg#icon_Inform"></use></svg>
                                         <div class="hover_box p-4 bg-back2">
@@ -243,7 +244,7 @@
                             <li class="swiper-slide cursor-pointer bg-list rounded">
                                 <a href="javascript:;"><img src="/bcGame/dist/custom_img/casino/casino_8.avif" alt=""></a>
                                 <div class="flex items-center justify-between px-2 py-3">
-                                    <p class="font-medium truncate"><a href="javascript:;">BC Originals</a></p>
+                                    <p class="font-medium truncate game_tit"><a href="javascript:;">BC Originals</a></p>
                                     <div class="casino_gameinfo ">
                                         <svg class="w-5 h-5 fill-basic cursor-pointer"><use xlink:href="/bcGame/dist/custom_img/symbol-defs.svg#icon_Inform"></use></svg>
                                         <div class="hover_box p-4 bg-back2">
@@ -267,7 +268,7 @@
                             <li class="swiper-slide cursor-pointer bg-list rounded">
                                 <a href="javascript:;"><img src="/bcGame/dist/custom_img/casino/casino_9.avif" alt=""></a>
                                 <div class="flex items-center justify-between px-2 py-3">
-                                    <p class="font-medium truncate"><a href="javascript:;">BC Originals</a></p>
+                                    <p class="font-medium truncate game_tit"><a href="javascript:;">BC Originals</a></p>
                                     <div class="casino_gameinfo ">
                                         <svg class="w-5 h-5 fill-basic cursor-pointer"><use xlink:href="/bcGame/dist/custom_img/symbol-defs.svg#icon_Inform"></use></svg>
                                         <div class="hover_box p-4 bg-back2">
@@ -291,7 +292,7 @@
                             <li class="swiper-slide cursor-pointer bg-list rounded">
                                 <a href="javascript:;"><img src="/bcGame/dist/custom_img/casino/casino_10.avif" alt=""></a>
                                 <div class="flex items-center justify-between px-2 py-3">
-                                    <p class="font-medium truncate"><a href="javascript:;">BC Originals</a></p>
+                                    <p class="font-medium truncate game_tit"><a href="javascript:;">BC Originals</a></p>
                                     <div class="casino_gameinfo ">
                                         <svg class="w-5 h-5 fill-basic cursor-pointer"><use xlink:href="/bcGame/dist/custom_img/symbol-defs.svg#icon_Inform"></use></svg>
                                         <div class="hover_box p-4 bg-back2">
@@ -315,7 +316,7 @@
                             <li class="swiper-slide cursor-pointer bg-list rounded">
                                 <a href="javascript:;"><img src="/bcGame/dist/custom_img/casino/casino_11.avif" alt=""></a>
                                 <div class="flex items-center justify-between px-2 py-3">
-                                    <p class="font-medium truncate"><a href="javascript:;">BC Originals</a></p>
+                                    <p class="font-medium truncate game_tit"><a href="javascript:;">BC Originals</a></p>
                                     <div class="casino_gameinfo ">
                                         <svg class="w-5 h-5 fill-basic cursor-pointer"><use xlink:href="/bcGame/dist/custom_img/symbol-defs.svg#icon_Inform"></use></svg>
                                         <div class="hover_box p-4 bg-back2">
@@ -339,7 +340,7 @@
                             <li class="swiper-slide cursor-pointer bg-list rounded">
                                 <a href="javascript:;"><img src="/bcGame/dist/custom_img/casino/casino_12.avif" alt=""></a>
                                 <div class="flex items-center justify-between px-2 py-3">
-                                    <p class="font-medium truncate"><a href="javascript:;">BC Originals</a></p>
+                                    <p class="font-medium truncate game_tit"><a href="javascript:;">BC Originals</a></p>
                                     <div class="casino_gameinfo ">
                                         <svg class="w-5 h-5 fill-basic cursor-pointer"><use xlink:href="/bcGame/dist/custom_img/symbol-defs.svg#icon_Inform"></use></svg>
                                         <div class="hover_box p-4 bg-back2">
