--- a/casino/new.html
+++ b/casino/new.html
@@ -55,19 +55,16 @@
                 <div class="container py-8">
                     <div class="flex flex-wrap items-center justify-between gap-2">
                         <div class="flex items-center gap-4">
-                            <div class="inline-flex items-center gap-2 p-2 px-4 bg-backlight rounded">
+                            <h3 class="flex sm:hidden items-center text-2xl text-tit font-extrabold"><a class="p-2" href="/bcGame/casino/index.html"><svg class="w-4 h-4 fill-basic rotate-180"><use xlink:href="/bcGame/dist/custom_img/symbol-defs.svg#icon_Arrow"></use></svg></a>New 출시</h3>
+                            <div class="hidden sm:inline-flex items-center gap-2 p-2 px-4 bg-backlight rounded">
                                 <span>카지노</span>
                                 <svg class="w-3 h-3 fill-basic"><use xlink:href="/bcGame/dist/custom_img/symbol-defs.svg#icon_Arrow"></use></svg>
                                 <b class="font-bold text-tit">New 출시</b>
                             </div>
-                            <div class="form-check form-switch"> 
-                                <input id="view_check" class="form-check-input small_check" type="checkbox"> 
-                                <label class="form-check-label" for="view_check">보기 차단</label> 
-                            </div>
                         </div>
                         <div class="flex flex-wrap items-center gap-x-6 gap-y-2">
                             <div class="flex items-center gap-3">
-                                <p>제공사</p>
+                                <p class="hidden sm:block">제공사</p>
                                 <div class="w-44">
                                     <div class="custom_select flex-1" data-select="count">
                                         <button class="btn h-10 flex px-4 items-center justify-between border-none bg-modaldark">
@@ -194,7 +191,7 @@
                         <li class="cursor-pointer bg-list rounded">
                             <a href="javascript:;"><img src="/bcGame/dist/custom_img/casino/slot_6.avif" alt=""></a>
                             <div class="flex items-center justify-between px-2 py-3">
-                                <p class="font-medium truncate"><a href="javascript:;">BC Originals</a></p>
+                                <p class="font-medium truncate game_tit"><a href="javascript:;">BC Originals</a></p>
                                 <div class="casino_gameinfo ">
                                     <svg class="w-5 h-5 fill-basic cursor-pointer"><use xlink:href="/bcGame/dist/custom_img/symbol-defs.svg#icon_Inform"></use></svg>
                                     <div class="hover_box p-4 bg-back2">
@@ -218,7 +215,7 @@
                         <li class="cursor-pointer bg-list rounded">
                           <a href="javascript:;"><img src="/bcGame/dist/custom_img/casino/casino_1.png" alt=""></a>
                           <div class="flex items-center justify-between px-2 py-3">
-                              <p class="font-medium truncate"><a href="javascript:;">BC Originals</a></p>
+                              <p class="font-medium truncate game_tit"><a href="javascript:;">BC Originals</a></p>
                               <div class="casino_gameinfo ">
                                   <svg class="w-5 h-5 fill-basic cursor-pointer"><use xlink:href="/bcGame/dist/custom_img/symbol-defs.svg#icon_Inform"></use></svg>
                                   <div class="hover_box p-4 bg-back2">
@@ -242,7 +239,7 @@
                         <li class="cursor-pointer bg-list rounded">
                           <a href="javascript:;"><img src="/bcGame/dist/custom_img/casino/slot_10.avif" alt=""></a>
                           <div class="flex items-center justify-between px-2 py-3">
-                              <p class="font-medium truncate"><a href="javascript:;">BC Originals</a></p>
+                              <p class="font-medium truncate game_tit"><a href="javascript:;">BC Originals</a></p>
                               <div class="casino_gameinfo ">
                                   <svg class="w-5 h-5 fill-basic cursor-pointer"><use xlink:href="/bcGame/dist/custom_img/symbol-defs.svg#icon_Inform"></use></svg>
                                   <div class="hover_box p-4 bg-back2">
@@ -266,7 +263,7 @@
                       <li class="cursor-pointer bg-list rounded">
                           <a href="javascript:;"><img src="/bcGame/dist/custom_img/casino/slot_9.avif" alt=""></a>
                           <div class="flex items-center justify-between px-2 py-3">
-                              <p class="font-medium truncate"><a href="javascript:;">BC Originals</a></p>
+                              <p class="font-medium truncate game_tit"><a href="javascript:;">BC Originals</a></p>
                               <div class="casino_gameinfo ">
                                   <svg class="w-5 h-5 fill-basic cursor-pointer"><use xlink:href="/bcGame/dist/custom_img/symbol-defs.svg#icon_Inform"></use></svg>
                                   <div class="hover_box p-4 bg-back2">
@@ -290,7 +287,7 @@
                       <li class="cursor-pointer bg-list rounded">
                           <a href="javascript:;"><img src="/bcGame/dist/custom_img/casino/casino_9.avif" alt=""></a>
                           <div class="flex items-center justify-between px-2 py-3">
-                              <p class="font-medium truncate"><a href="javascript:;">BC Originals</a></p>
+                              <p class="font-medium truncate game_tit"><a href="javascript:;">BC Originals</a></p>
                               <div class="casino_gameinfo ">
                                   <svg class="w-5 h-5 fill-basic cursor-pointer"><use xlink:href="/bcGame/dist/custom_img/symbol-defs.svg#icon_Inform"></use></svg>
                                   <div class="hover_box p-4 bg-back2">
@@ -314,7 +311,7 @@
                         <li class="cursor-pointer bg-list rounded">
                             <a href="javascript:;"><img src="/bcGame/dist/custom_img/casino/casino_8.avif" alt=""></a>
                             <div class="flex items-center justify-between px-2 py-3">
-                                <p class="font-medium truncate"><a href="javascript:;">BC Originals</a></p>
+                                <p class="font-medium truncate game_tit"><a href="javascript:;">BC Originals</a></p>
                                 <div class="casino_gameinfo ">
                                     <svg class="w-5 h-5 fill-basic cursor-pointer"><use xlink:href="/bcGame/dist/custom_img/symbol-defs.svg#icon_Inform"></use></svg>
                                     <div class="hover_box p-4 bg-back2">
@@ -338,7 +335,7 @@
                         <li class="cursor-pointer bg-list rounded">
                             <a href="javascript:;"><img src="/bcGame/dist/custom_img/casino/casino_3.png" alt=""></a>
                             <div class="flex items-center justify-between px-2 py-3">
-                                <p class="font-medium truncate"><a href="javascript:;">BC Originals</a></p>
+                                <p class="font-medium truncate game_tit"><a href="javascript:;">BC Originals</a></p>
                                 <div class="casino_gameinfo ">
                                     <svg class="w-5 h-5 fill-basic cursor-pointer"><use xlink:href="/bcGame/dist/custom_img/symbol-defs.svg#icon_Inform"></use></svg>
                                     <div class="hover_box p-4 bg-back2">
@@ -362,7 +359,7 @@
                         <li class="cursor-pointer bg-list rounded">
                             <a href="javascript:;"><img src="/bcGame/dist/custom_img/casino/casino_6.avif" alt=""></a>
                             <div class="flex items-center justify-between px-2 py-3">
-                                <p class="font-medium truncate"><a href="javascript:;">BC Originals</a></p>
+                                <p class="font-medium truncate game_tit"><a href="javascript:;">BC Originals</a></p>
                                 <div class="casino_gameinfo ">
                                     <svg class="w-5 h-5 fill-basic cursor-pointer"><use xlink:href="/bcGame/dist/custom_img/symbol-defs.svg#icon_Inform"></use></svg>
                                     <div class="hover_box p-4 bg-back2">
@@ -386,7 +383,7 @@
                         <li class="cursor-pointer bg-list rounded">
                             <a href="javascript:;"><img src="/bcGame/dist/custom_img/casino/slot_11.avif" alt=""></a>
                             <div class="flex items-center justify-between px-2 py-3">
-                                <p class="font-medium truncate"><a href="javascript:;">BC Originals</a></p>
+                                <p class="font-medium truncate game_tit"><a href="javascript:;">BC Originals</a></p>
                                 <div class="casino_gameinfo ">
                                     <svg class="w-5 h-5 fill-basic cursor-pointer"><use xlink:href="/bcGame/dist/custom_img/symbol-defs.svg#icon_Inform"></use></svg>
                                     <div class="hover_box p-4 bg-back2">
@@ -410,7 +407,7 @@
                         <li class="cursor-pointer bg-list rounded">
                           <a href="javascript:;"><img src="/bcGame/dist/custom_img/casino/casino_5.avif" alt=""></a>
                           <div class="flex items-center justify-between px-2 py-3">
-                              <p class="font-medium truncate"><a href="javascript:;">BC Originals</a></p>
+                              <p class="font-medium truncate game_tit"><a href="javascript:;">BC Originals</a></p>
                               <div class="casino_gameinfo ">
                                   <svg class="w-5 h-5 fill-basic cursor-pointer"><use xlink:href="/bcGame/dist/custom_img/symbol-defs.svg#icon_Inform"></use></svg>
                                   <div class="hover_box p-4 bg-back2">
@@ -434,7 +431,7 @@
                       <li class="cursor-pointer bg-list rounded">
                           <a href="javascript:;"><img src="/bcGame/dist/custom_img/casino/slot_8.avif" alt=""></a>
                           <div class="flex items-center justify-between px-2 py-3">
-                              <p class="font-medium truncate"><a href="javascript:;">BC Originals</a></p>
+                              <p class="font-medium truncate game_tit"><a href="javascript:;">BC Originals</a></p>
                               <div class="casino_gameinfo ">
                                   <svg class="w-5 h-5 fill-basic cursor-pointer"><use xlink:href="/bcGame/dist/custom_img/symbol-defs.svg#icon_Inform"></use></svg>
                                   <div class="hover_box p-4 bg-back2">
@@ -458,7 +455,7 @@
                       <li class="cursor-pointer bg-list rounded">
                           <a href="javascript:;"><img src="/bcGame/dist/custom_img/casino/live_7.avif" alt=""></a>
                           <div class="flex items-center justify-between px-2 py-3">
-                              <p class="font-medium truncate"><a href="javascript:;">BC Originals</a></p>
+                              <p class="font-medium truncate game_tit"><a href="javascript:;">BC Originals</a></p>
                               <div class="casino_gameinfo ">
                                   <svg class="w-5 h-5 fill-basic cursor-pointer"><use xlink:href="/bcGame/dist/custom_img/symbol-defs.svg#icon_Inform"></use></svg>
                                   <div class="hover_box p-4 bg-back2">
@@ -482,7 +479,7 @@
                       <li class="cursor-pointer bg-list rounded">
                           <a href="javascript:;"><img src="/bcGame/dist/custom_img/casino/casino_9.avif" alt=""></a>
                           <div class="flex items-center justify-between px-2 py-3">
-                              <p class="font-medium truncate"><a href="javascript:;">BC Originals</a></p>
+                              <p class="font-medium truncate game_tit"><a href="javascript:;">BC Originals</a></p>
                               <div class="casino_gameinfo ">
                                   <svg class="w-5 h-5 fill-basic cursor-pointer"><use xlink:href="/bcGame/dist/custom_img/symbol-defs.svg#icon_Inform"></use></svg>
                                   <div class="hover_box p-4 bg-back2">
@@ -506,7 +503,7 @@
                       <li class="cursor-pointer bg-list rounded">
                         <a href="javascript:;"><img src="/bcGame/dist/custom_img/casino/casino_12.avif" alt=""></a>
                         <div class="flex items-center justify-between px-2 py-3">
-                            <p class="font-medium truncate"><a href="javascript:;">BC Originals</a></p>
+                            <p class="font-medium truncate game_tit"><a href="javascript:;">BC Originals</a></p>
                             <div class="casino_gameinfo ">
                                 <svg class="w-5 h-5 fill-basic cursor-pointer"><use xlink:href="/bcGame/dist/custom_img/symbol-defs.svg#icon_Inform"></use></svg>
                                 <div class="hover_box p-4 bg-back2">
@@ -530,7 +527,7 @@
                     <li class="cursor-pointer bg-list rounded">
                         <a href="javascript:;"><img src="/bcGame/dist/custom_img/casino/casino_7.avif" alt=""></a>
                         <div class="flex items-center justify-between px-2 py-3">
-                            <p class="font-medium truncate"><a href="javascript:;">BC Originals</a></p>
+                            <p class="font-medium truncate game_tit"><a href="javascript:;">BC Originals</a></p>
                             <div class="casino_gameinfo ">
                                 <svg class="w-5 h-5 fill-basic cursor-pointer"><use xlink:href="/bcGame/dist/custom_img/symbol-defs.svg#icon_Inform"></use></svg>
                                 <div class="hover_box p-4 bg-back2">
@@ -554,7 +551,7 @@
                     <li class="cursor-pointer bg-list rounded">
                         <a href="javascript:;"><img src="/bcGame/dist/custom_img/casino/slot_1.avif" alt=""></a>
                         <div class="flex items-center justify-between px-2 py-3">
-                            <p class="font-medium truncate"><a href="javascript:;">BC Originals</a></p>
+                            <p class="font-medium truncate game_tit"><a href="javascript:;">BC Originals</a></p>
                             <div class="casino_gameinfo ">
                                 <svg class="w-5 h-5 fill-basic cursor-pointer"><use xlink:href="/bcGame/dist/custom_img/symbol-defs.svg#icon_Inform"></use></svg>
                                 <div class="hover_box p-4 bg-back2">
@@ -578,7 +575,7 @@
                       <li class="cursor-pointer bg-list rounded">
                           <a href="javascript:;"><img src="/bcGame/dist/custom_img/casino/slot_10.avif" alt=""></a>
                           <div class="flex items-center justify-between px-2 py-3">
-                              <p class="font-medium truncate"><a href="javascript:;">BC Originals</a></p>
+                              <p class="font-medium truncate game_tit"><a href="javascript:;">BC Originals</a></p>
                               <div class="casino_gameinfo ">
                                   <svg class="w-5 h-5 fill-basic cursor-pointer"><use xlink:href="/bcGame/dist/custom_img/symbol-defs.svg#icon_Inform"></use></svg>
                                   <div class="hover_box p-4 bg-back2">
@@ -602,7 +599,7 @@
                       <li class="cursor-pointer bg-list rounded">
                           <a href="javascript:;"><img src="/bcGame/dist/custom_img/casino/slot_2.avif" alt=""></a>
                           <div class="flex items-center justify-between px-2 py-3">
-                              <p class="font-medium truncate"><a href="javascript:;">BC Originals</a></p>
+                              <p class="font-medium truncate game_tit"><a href="javascript:;">BC Originals</a></p>
                               <div class="casino_gameinfo ">
                                   <svg class="w-5 h-5 fill-basic cursor-pointer"><use xlink:href="/bcGame/dist/custom_img/symbol-defs.svg#icon_Inform"></use></svg>
                                   <div class="hover_box p-4 bg-back2">
@@ -626,7 +623,7 @@
                       <li class="cursor-pointer bg-list rounded">
                           <a href="javascript:;"><img src="/bcGame/dist/custom_img/casino/slot_6.avif" alt=""></a>
                           <div class="flex items-center justify-between px-2 py-3">
-                              <p class="font-medium truncate"><a href="javascript:;">BC Originals</a></p>
+                              <p class="font-medium truncate game_tit"><a href="javascript:;">BC Originals</a></p>
                               <div class="casino_gameinfo ">
                                   <svg class="w-5 h-5 fill-basic cursor-pointer"><use xlink:href="/bcGame/dist/custom_img/symbol-defs.svg#icon_Inform"></use></svg>
                                   <div class="hover_box p-4 bg-back2">
@@ -650,7 +647,7 @@
                       <li class="cursor-pointer bg-list rounded">
                           <a href="javascript:;"><img src="/bcGame/dist/custom_img/casino/casino_4.avif" alt=""></a>
                           <div class="flex items-center justify-between px-2 py-3">
-                              <p class="font-medium truncate"><a href="javascript:;">BC Originals</a></p>
+                              <p class="font-medium truncate game_tit"><a href="javascript:;">BC Originals</a></p>
                               <div class="casino_gameinfo ">
                                   <svg class="w-5 h-5 fill-basic cursor-pointer"><use xlink:href="/bcGame/dist/custom_img/symbol-defs.svg#icon_Inform"></use></svg>
                                   <div class="hover_box p-4 bg-back2">
@@ -673,7 +670,7 @@
                       </li><li class="cursor-pointer bg-list rounded">
                           <a href="javascript:;"><img src="/bcGame/dist/custom_img/casino/slot_1.avif" alt=""></a>
                           <div class="flex items-center justify-between px-2 py-3">
-                              <p class="font-medium truncate"><a href="javascript:;">BC Originals</a></p>
+                              <p class="font-medium truncate game_tit"><a href="javascript:;">BC Originals</a></p>
                               <div class="casino_gameinfo ">
                                   <svg class="w-5 h-5 fill-basic cursor-pointer"><use xlink:href="/bcGame/dist/custom_img/symbol-defs.svg#icon_Inform"></use></svg>
                                   <div class="hover_box p-4 bg-back2">
@@ -697,7 +694,7 @@
                       <li class="cursor-pointer bg-list rounded">
                           <a href="javascript:;"><img src="/bcGame/dist/custom_img/casino/casino_2.png" alt=""></a>
                           <div class="flex items-center justify-between px-2 py-3">
-                              <p class="font-medium truncate"><a href="javascript:;">BC Originals</a></p>
+                              <p class="font-medium truncate game_tit"><a href="javascript:;">BC Originals</a></p>
                               <div class="casino_gameinfo ">
                                   <svg class="w-5 h-5 fill-basic cursor-pointer"><use xlink:href="/bcGame/dist/custom_img/symbol-defs.svg#icon_Inform"></use></svg>
                                   <div class="hover_box p-4 bg-back2">
