--- a/casino/recent.html
+++ b/casino/recent.html
@@ -53,7 +53,8 @@
             <div class="container_wrap">
 
                 <div class="container py-8">
-                  <div class="inline-flex items-center gap-2 p-2 px-4 bg-backlight rounded">
+                    <h3 class="flex sm:hidden items-center text-2xl text-tit font-extrabold"><a class="p-2" href="/bcGame/casino/index.html"><svg class="w-4 h-4 fill-basic rotate-180"><use xlink:href="/bcGame/dist/custom_img/symbol-defs.svg#icon_Arrow"></use></svg></a>최근</h3>
+                    <div class="hidden sm:inline-flex items-center gap-2 p-2 px-4 bg-backlight rounded">
                       <span>카지노</span>
                       <svg class="w-3 h-3 fill-basic"><use xlink:href="/bcGame/dist/custom_img/symbol-defs.svg#icon_Arrow"></use></svg>
                       <b class="font-bold text-tit">최근</b>
@@ -62,7 +63,7 @@
                         <li class="cursor-pointer bg-list rounded">
                             <a href="javascript:;"><img src="/bcGame/dist/custom_img/casino/casino_1.png" alt=""></a>
                             <div class="flex items-center justify-between px-2 py-3">
-                                <p class="font-medium truncate"><a href="javascript:;">BC Originals</a></p>
+                                <p class="font-medium truncate game_tit"><a href="javascript:;">BC Originals</a></p>
                                 <div class="casino_gameinfo ">
                                     <svg class="w-5 h-5 fill-basic cursor-pointer"><use xlink:href="/bcGame/dist/custom_img/symbol-defs.svg#icon_Inform"></use></svg>
                                     <div class="hover_box p-4 bg-back2">
@@ -86,7 +87,7 @@
                         <li class="cursor-pointer bg-list rounded">
                             <a href="javascript:;"><img src="/bcGame/dist/custom_img/casino/casino_2.png" alt=""></a>
                             <div class="flex items-center justify-between px-2 py-3">
-                                <p class="font-medium truncate"><a href="javascript:;">BC Originals</a></p>
+                                <p class="font-medium truncate game_tit"><a href="javascript:;">BC Originals</a></p>
                                 <div class="casino_gameinfo ">
                                     <svg class="w-5 h-5 fill-basic cursor-pointer"><use xlink:href="/bcGame/dist/custom_img/symbol-defs.svg#icon_Inform"></use></svg>
                                     <div class="hover_box p-4 bg-back2">
@@ -110,7 +111,7 @@
                         <li class="cursor-pointer bg-list rounded">
                             <a href="javascript:;"><img src="/bcGame/dist/custom_img/casino/casino_3.png" alt=""></a>
                             <div class="flex items-center justify-between px-2 py-3">
-                                <p class="font-medium truncate"><a href="javascript:;">BC Originals</a></p>
+                                <p class="font-medium truncate game_tit"><a href="javascript:;">BC Originals</a></p>
                                 <div class="casino_gameinfo ">
                                     <svg class="w-5 h-5 fill-basic cursor-pointer"><use xlink:href="/bcGame/dist/custom_img/symbol-defs.svg#icon_Inform"></use></svg>
                                     <div class="hover_box p-4 bg-back2">
@@ -134,7 +135,7 @@
                         <li class="cursor-pointer bg-list rounded">
                             <a href="javascript:;"><img src="/bcGame/dist/custom_img/casino/casino_4.avif" alt=""></a>
                             <div class="flex items-center justify-between px-2 py-3">
-                                <p class="font-medium truncate"><a href="javascript:;">BC Originals</a></p>
+                                <p class="font-medium truncate game_tit"><a href="javascript:;">BC Originals</a></p>
                                 <div class="casino_gameinfo ">
                                     <svg class="w-5 h-5 fill-basic cursor-pointer"><use xlink:href="/bcGame/dist/custom_img/symbol-defs.svg#icon_Inform"></use></svg>
                                     <div class="hover_box p-4 bg-back2">
